[project]
name = "asyncrinoca12"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "lxml (>=5.4.0,<6.0.0)",
    "pytz (>=2025.2,<2026.0)",
    "aioodbc (>=0.5.0,<0.6.0)",
    "aiohttp (>=3.12.13,<4.0.0)",
    "gspread-formatting (>=1.2.1,<2.0.0)",
    "oauth2client (>=4.1.3,<5.0.0)",
    "gspread-asyncio (>=2.0.0,<3.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
